changed astro data to Star Select 1

--- a/public/index.html
+++ b/public/index.html
@@ -27,15 +27,15 @@
     <div id="jwplayerDiv"></div>
     <script type="text/javascript">
         jwplayer("jwplayerDiv").setup({
-            file: "https://linearjitp02-playback.astro.com.my/dash-wv/linear/2504/default.mpd", position: 'bottom',
+            file: "https://bpcdn.dialog.lk/bpk-tv/Ch121/output/index.mpd", position: 'bottom',
             "autostart": true,
             "stretching": "exactfit",
             "width": "100%",
             type: "dash",
             drm: {
                 "clearkey": {
-                    "keyId": "03c2e0af2f8159f9f0ce9b5dbc865f10",
-                    "key": "cd84ed136b0cc71f8ab8cd4d4f6a2e4c"
+                    "keyId": "1c6db28d2f3a024669ecfcefb1d99a39",
+                    "key": "cba6f642dac4e2489680631e4b7a0af2"
                 }
             }
         });    
